Update tci express check

--- a/tci.html
+++ b/tci.html
@@ -22,7 +22,7 @@ document.getElementById("frmTrack").submit();
 
 </script>
 </head>
-<body /**onload="red()"**/>
+<body onload="red()">
 <form id="frmTrack" name="frmTrack" action="http://www.tciexpress.in/trackingdocket.asp" method="post">
 
 <input id="dwbno" type="text" name="dwbno" value="211000039806" size="31">
