updated tci lr no default values changed

--- a/tci.html
+++ b/tci.html
@@ -25,7 +25,7 @@ document.getElementById("frmTrack").submit();
 <body onload="red()">
 <form id="frmTrack" name="frmTrack" action="http://www.tciexpress.in/trackingdocket.asp" method="post">
 
-<input id="dwbno" type="text" name="dwbno" value="211000039806" size="31">
+<input id="dwbno" type="text" name="dwbno" value="CheckValue" size="31">
 <input type="submit" value=" Submit ">
 
 </form>
