updated for javascript func

--- a/gati.html
+++ b/gati.html
@@ -13,7 +13,7 @@ function findGetParameter(parameterName) {
     return result;
 }
 function redirectWithPost(){
-document.getElementById("dwbno").value = findGetParameter("dwbno");
+document.getElementById("docket_id").value = findGetParameter("docket_id");
 document.getElementById("frmTrack").submit();
 }
 </script>
